kube/server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  name: hw-server-ingress
spec:
  tls:
  - hosts:
    - chw-study.nandan.cloud
    secretName: chw-study-cert
  rules:
    - host: chw-study.nandan.cloud
      http:
        paths:
        - path: /
          backend:
            serviceName: hw-server
            servicePort: 80
